Fixed ImageExporterTest.